--- a/local-dev/docker-compose.yaml
+++ b/local-dev/docker-compose.yaml
@@ -97,3 +97,19 @@ services:
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
+
+  # Remove the following service if you want to run it locally in your IDE
+  eam-event-handler:
+    image: eam-event-handler-poc:local-build
+    hostname: eam-event-handler
+    container_name: eam-event-handler
+    depends_on:
+      - kafka
+      - schema-registry
+    ports:
+      - "8080:8080"
+    environment:
+      KAFKA_CONSUMER_BOOTSTRAP_SERVERS: 'kafka:29092'
+      KAFKA_CONSUMER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
+      KAFKA_PRODUCER_BROKER: 'kafka:29092'
+      KAFKA_PRODUCER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
